# service_template_test

./: CMakeLists.txt  Makefile
configs/: config_vars.yaml  static_config.yaml
src/: main.cpp
